--- a/BlazorOAuthAPI/appsettings.json
+++ b/BlazorOAuthAPI/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=YP1101088LT\\SQLINSTANCE_1;Database=blazor_learning;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=sa;Password=Dime9090!Dime9090!;TrustServerCertificate=True;"
+    // "DefaultConnection": "Server=YP1101088LT\\SQLINSTANCE_1;Database=blazor_learning;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=sa;Password=Dime9090!Dime9090!;TrustServerCertificate=True;"
+
+    "DefaultConnection": "Server=SAGARB;Database=blazor_learning;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=sa;Password=Dime9292!;TrustServerCertificate=True;"
   }
 }
