Added grpahQL for getAll. Insert

--- a/BlazorApp_Crud/appsettings.json
+++ b/BlazorApp_Crud/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    // "DefaultConnection": "Server=YP1101088LT\\SQLINSTANCE_1;Database=blazor_learning;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=sa;Password=Dime9090!Dime9090!;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=YP1101088LT\\SQLINSTANCE_1;Database=blazor_learning;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=sa;Password=Dime9090!Dime9090!;TrustServerCertificate=True;"
 
-    "DefaultConnection": "Server=SAGARB;Database=blazor_learning;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=sa;Password=Dime9292!;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=SAGARB;Database=blazor_learning;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=sa;Password=Dime9292!;TrustServerCertificate=True;"
   },
-  "GraphQlSeverBaseUrl": "https://localhost:44386/"
+  "GraphQlSeverBaseUrl": "https://localhost:44386/graphql"
 }
